--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PrivatBank Tickets</title>
+    <title>Public Transport Tickets</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <script>
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="configuration.css">
     <link rel="stylesheet" href="emulation.css">
-    <meta name="theme-color" content="#BDBDBD" />
+    <meta name="theme-color" content="#5B9B21" />
     <link rel="icon" sizes="128x128" href="images/icons/icon-128x128.png">
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="manifest" href="manifest.json">
