fix: changed radio-switch names

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
             <div class="row">
                 <div class="border border--small">
                     <div class="radio-switch">
-                        <input type="radio" id="bus-switch-1" name="bus-switch" value="bus"/>
-                        <label for="bus-switch-1">BUS</label>
-                        <input type="radio" id="bus-switch-2" name="bus-switch" checked="checked" value="not a bus"/>
-                        <label for="bus-switch-2">NOT A BUS</label>
+                        <input type="radio" id="bus-switch-1" name="bus-switch" checked="checked" value="others"/>
+                        <label for="bus-switch-1">OTHERS</label>
+                        <input type="radio" id="bus-switch-2" name="bus-switch" value="bus"/>
+                        <label for="bus-switch-2">BUS</label>
                         <div class="background"></div>
                     </div>
                 </div>
