--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     <link rel="icon" sizes="128x128" href="images/icons/icon-128x128.png">
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="manifest" href="manifest.json">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134982632-2"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-134982632-2');
+	</script>
 </head>
 <body>
 <template id="ticket-template">
